# hello_stranger

./: README.md
server/: .env  Cargo.toml
server/crates/entity/: Cargo.toml
server/crates/entity/src/: lib.rs  prelude.rs  users.rs
server/migrations/: 20251023081629_create_users_table.up.sql  20251023084752_create_rbac_tables.up.sql
server/src/: main.rs
server/src/apis/: mod.rs  user_api.rs
server/src/core/: config.rs  mod.rs  router.rs
