[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.48.0", features = ["full"] }
# web框架
# https://salvo.rs/zh-hans/guide/quick-start.html
salvo = { version = "0.84", features = ["logging","oapi","anyhow","cors","affix-state","test"] }
salvo-oapi = { version = "0.84", features = ["swagger-ui"] }
#utoipa = { version = "5.0.0", features = ["chrono"] } 
# 序列化
serde = { version = "1.0.219", features = ["derive"] }
# 中间件
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
# 日志 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# 环境变量
dotenvy = "0.15.7"
# 数据库
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ] }
sea-orm = { version = "1.1.13", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","debug-print"] }